objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Coordonnatrice Zone 88</fullName>
                </value>
                <value>
                    <fullName>CQE</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Quality</fullName>
                </value>
                <value>
                    <fullName>Release Team</fullName>
                </value>
                <value>
                    <fullName>BTV Routing</fullName>
                </value>
                <value>
                    <fullName>Zone 88</fullName>
                </value>
                <value>
                    <fullName>ITAR</fullName>
                </value>
                <value>
                    <fullName>Bromont Zone88</fullName>
                </value>
                <value>
                    <fullName>MFG Release</fullName>
                </value>
                <value>
                    <fullName>Mfg. Quality Operations</fullName>
                </value>
                <value>
                    <fullName>Containment Team</fullName>
                </value>
                <value>
                    <fullName>OSAT BNP First Approval</fullName>
                </value>
                <value>
                    <fullName>OSAT BNP Second Approval</fullName>
                </value>
                <value>
                    <fullName>Bromont Partial Crib</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_all_lot_parentage_intact__c</fullName>
        <label>Are all lot parentage intact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_lots_identified_in_a_Stop_Ship__c</fullName>
        <label>Are lots identified in a Stop Ship?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_lots_part_of_an_Active_vintage__c</fullName>
        <label>Are lots part of an &quot;Active&quot; vintage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AsmView_or_BB_release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AsmView or BB release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOM__c</fullName>
        <label>BOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Box_Cube_Qty__c</fullName>
        <label>Balance (Box/Cube Qty)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
                <value>
                    <fullName>SPECIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COO__c</fullName>
        <label>COO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                    <default>true</default>
                    <label>CA</label>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Request</fullName>
                    <default>true</default>
                    <label>Engineering Request</label>
                </value>
                <value>
                    <fullName>Aged</fullName>
                </value>
                <value>
                    <fullName>Custom Request</fullName>
                </value>
                <value>
                    <fullName>Group C</fullName>
                </value>
                <value>
                    <fullName>R35 RMA - ONLY</fullName>
                </value>
                <value>
                    <fullName>RMA - Others</fullName>
                </value>
                <value>
                    <fullName>Stop Shipment</fullName>
                </value>
                <value>
                    <fullName>Vendor Return</fullName>
                </value>
                <value>
                    <fullName>Vintage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declared_LOT_OSAT_input__c</fullName>
        <label>Declared LOT # (OSAT input)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Die_PN__c</fullName>
        <label>Die PN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Die_Availability_Date__c</fullName>
        <label>Est Die Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSE__c</fullName>
        <label>FSE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Factor__c</fullName>
        <label>Form Factor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FC-PBGA</fullName>
                    <default>true</default>
                    <label>FC-PBGA</label>
                </value>
                <value>
                    <fullName>Die</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GF_Focal_Contact__c</fullName>
        <label>GF Focal Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISC_Engineering_Customer_Instructions__c</fullName>
        <label>ISC\Engineering\Customer Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ISC_Instructions__c</fullName>
        <label>ISC Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Waiver_number__c</fullName>
        <label>Is there a Waiver number?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Sensitive_Part_APC4__c</fullName>
        <label>Is this a Sensitive Part?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JC_Sub_Lot_Type__c</fullName>
        <label>JC/Sub Lot Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Lot</fullName>
                </value>
                <value>
                    <fullName>0 (Normal product)</fullName>
                </value>
                <value>
                    <fullName>2 (Eng/Pot Sell or ship)</fullName>
                </value>
                <value>
                    <fullName>3 (Proc Win/TW Lot Pot Sell)</fullName>
                </value>
                <value>
                    <fullName>4 (Recon)</fullName>
                </value>
                <value>
                    <fullName>5 (Offspec)</fullName>
                </value>
                <value>
                    <fullName>6 (Reconnable PCN)</fullName>
                </value>
                <value>
                    <fullName>7 (RTAT Slots)</fullName>
                </value>
                <value>
                    <fullName>8 (Non-reconnable PCN)</fullName>
                </value>
                <value>
                    <fullName>9 (Express)</fullName>
                </value>
                <value>
                    <fullName>A (Costed NonStd Bromont rework)</fullName>
                </value>
                <value>
                    <fullName>B ( Do not use)</fullName>
                </value>
                <value>
                    <fullName>C (Non-IBM Consign Vendor value add)</fullName>
                </value>
                <value>
                    <fullName>D (Dummy Lot number)</fullName>
                </value>
                <value>
                    <fullName>E (Pre T2 OEM)</fullName>
                </value>
                <value>
                    <fullName>F (Consigned with value add)</fullName>
                </value>
                <value>
                    <fullName>G (MFG Rtat/Ntat not for supply)</fullName>
                </value>
                <value>
                    <fullName>H (Non IBM cosign Vendor Rtat Vadd)</fullName>
                </value>
                <value>
                    <fullName>K (T/S non por, short loops)</fullName>
                </value>
                <value>
                    <fullName>L (RTAT DEV)</fullName>
                </value>
                <value>
                    <fullName>M (MFG Rtat euh supply 300mm)</fullName>
                </value>
                <value>
                    <fullName>N (Align Nitride thick)</fullName>
                </value>
                <value>
                    <fullName>P (Merge Recon lots)</fullName>
                </value>
                <value>
                    <fullName>Q (T1, Qual lot, same as L2)</fullName>
                </value>
                <value>
                    <fullName>R (Stock Rework)</fullName>
                </value>
                <value>
                    <fullName>S (Ship Track Control)</fullName>
                </value>
                <value>
                    <fullName>T (Uncosted non std rework)</fullName>
                </value>
                <value>
                    <fullName>V (BTV, R35, RMA)</fullName>
                </value>
                <value>
                    <fullName>W (MFG Ntat EUH supply 300mm)</fullName>
                </value>
                <value>
                    <fullName>X (Rework)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JC__c</fullName>
        <label>JC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <label>Job Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>X-NonCosted CUSTOMER STOCK REWORK</fullName>
                    <default>true</default>
                    <label>X-NonCosted CUSTOMER STOCK REWORK</label>
                </value>
                <value>
                    <fullName>A-Non standard Costed</fullName>
                </value>
                <value>
                    <fullName>R-Costed STOCK REWORK</fullName>
                </value>
                <value>
                    <fullName>T- Non Standard NonCosted</fullName>
                </value>
                <value>
                    <fullName>W-NonCosted MFG NTAT EUH FOR SUPPLY 300NM</fullName>
                </value>
                <value>
                    <fullName>F-Costed CONSIGNED WITH COMPANY VALUE ADD</fullName>
                </value>
                <value>
                    <fullName>3-NonCosted PROC WIN/ T2 LOT POT SELL</fullName>
                </value>
                <value>
                    <fullName>C-NonCosted CONSIGN WITH VENDOR VALUE ADD</fullName>
                </value>
                <value>
                    <fullName>9- Express</fullName>
                </value>
                <value>
                    <fullName>V-NonCosted R35 RMA or Service Request Return Fails to the Customer = Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Code__c</fullName>
        <label>Line Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y – Bromont Rework</fullName>
                    <default>true</default>
                    <label>Y – Bromont Rework</label>
                </value>
                <value>
                    <fullName>M - Burlington</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Type__c</fullName>
        <label>Lot Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prod+SI</fullName>
                </value>
                <value>
                    <fullName>Service+SI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturing_PN__c</fullName>
        <label>Manufacturing PN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Cube__c</fullName>
        <inlineHelpText>ASMview Module - Mfg Release: Transfer via ZLPT to COST attn.: BROMONT ZONE 88
Bromont: Release to LPT=QR
Device Cube - Mfg Release: Transfer via ZLPT to COST attn.: “Q-32 REPACK”
Bromont: Physically repack and transfer back</inlineHelpText>
        <label>Module/Cube</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASMview Module</fullName>
                </value>
                <value>
                    <fullName>Device Cube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module_PN__c</fullName>
        <label>Module PN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Stock_Date__c</fullName>
        <label>Module Stock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSAT_Contact__c</fullName>
        <label>OSAT Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSAT_Ready__c</fullName>
        <label>OSAT Ready</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSAT_Rework_Instructions__c</fullName>
        <label>OSAT Rework Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Original_PN__c</fullName>
        <label>Original PN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Carrier__c</fullName>
        <label>Output Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRAYS</fullName>
                    <default>true</default>
                    <label>TRAYS</label>
                </value>
                <value>
                    <fullName>Cubes</fullName>
                </value>
                <value>
                    <fullName>Reels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POI__c</fullName>
        <label>POI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_FC__c</fullName>
        <label>Primary FC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_PC__c</fullName>
        <label>Primary PC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modules</fullName>
                    <default>true</default>
                    <label>Modules</label>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provide_LPT__c</fullName>
        <label>Provide LPT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F1 - FailureAnalysis</fullName>
                    <default>true</default>
                    <label>F1 - FailureAnalysis</label>
                </value>
                <value>
                    <fullName>Q1=ASMview stock rework use route (RC_Q_STB_LISTEN)</fullName>
                </value>
                <value>
                    <fullName>0 = Default</fullName>
                </value>
                <value>
                    <fullName>LE= Line Return - Electrical Fail</fullName>
                </value>
                <value>
                    <fullName>LF= Electrical FA Return</fullName>
                </value>
                <value>
                    <fullName>LH= Line Return - Hat Recovery</fullName>
                </value>
                <value>
                    <fullName>LM= Line Return Mech.Fail</fullName>
                </value>
                <value>
                    <fullName>LN= Equal To New(ETN)</fullName>
                </value>
                <value>
                    <fullName>LU= Line Return - Underfill</fullName>
                </value>
                <value>
                    <fullName>Q =  MCS Stock Rework</fullName>
                </value>
                <value>
                    <fullName>Q2= Zone88 Ebbetts Special Retest</fullName>
                </value>
                <value>
                    <fullName>EC= ECUPS</fullName>
                </value>
                <value>
                    <fullName>FR = Field Return</fullName>
                </value>
                <value>
                    <fullName>QL = Zone88 equivalent to Line Return electrical fail (BTV/BRMT agreement prior to usage)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Level__c</fullName>
        <label>Quality Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>PQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RMA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RMA__c.ReasonCode__c</field>
                <operation>equals</operation>
                <value>R10</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>QMX Work Orders</relationshipLabel>
        <relationshipName>RMA_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_SAP__c</fullName>
        <description>RMA Information from SAP system</description>
        <label>RMA (SAP)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Area__c</fullName>
        <label>Release Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bromont Zone 88</fullName>
                    <default>true</default>
                    <label>Bromont Zone 88</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Lot_ID__c</fullName>
        <label>Release Lot ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Lot_Label_Format__c</fullName>
        <label>Release Lot Label Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ULL (Universal)</fullName>
                    <default>true</default>
                    <label>ULL (Universal)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_PN__c</fullName>
        <label>Release PN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Quantity__c</fullName>
        <label>Release Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_package_as_SPQ__c</fullName>
        <label>Request package as SPQ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_fails_to_customer__c</fullName>
        <label>Return fails to customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rework_Instructions__c</fullName>
        <label>Rework Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rework_Lot__c</fullName>
        <label>Rework Lot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA38_ZmmmR08_Inventory_Status__c</fullName>
        <label>SA38 ZmmmR08 Inventory Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLOC__c</fullName>
        <label>SLOC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 88</fullName>
                    <default>true</default>
                    <label>Zone 88</label>
                </value>
                <value>
                    <fullName>WHS1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Purchase_Order_UnCosted__c</fullName>
        <label>Service Purchase Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_marking_required__c</fullName>
        <label>Special marking required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RTAT</fullName>
                </value>
                <value>
                    <fullName>NTAT</fullName>
                </value>
                <value>
                    <fullName>S-RTAT</fullName>
                </value>
                <value>
                    <fullName>T-RTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Qty__c</fullName>
        <label>Start Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substrate_Laminate_PN__c</fullName>
        <label>Substrate/Laminate PN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Go_Qty__c</fullName>
        <label>To Go Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Go_Quantity__c</fullName>
        <formula>Start_Qty__c - Release_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Go Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wafer_Lot_Number__c</fullName>
        <label>Wafer Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZVRD_ZREL_or_Enter_ZLPT_Reservation__c</fullName>
        <label>ZVRD / ZREL or Enter ZLPT Reservation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>QMX Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OSAT_BNP_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>OSAT BNP</label>
        <queue>OSAT_BNP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Bromont_Partial_Crib_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Bromont Full Box Crib</label>
        <queue>QMX_Bromont_Partial_Crib</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_BTV_Routing_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order BTV Routing</label>
        <queue>QMX_Work_Order_BTV_Routing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_Bromont_Zone88_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order Bromont Zone88</label>
        <queue>QMX_Work_Order_Bromont_Zone88</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_CQE_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order CQE</label>
        <queue>QMX_Work_Order_CQE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_ITAR_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order ITAR</label>
        <queue>QMX_Work_Order_ITAR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_MFG_Release_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order MFG Release</label>
        <queue>QMX_Work_Order_MFG_Release</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_Manufacturing_Quality_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order Manufacturing Quality</label>
        <queue>QMX_Work_Order_Manufacturing_Quality</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QMX_Work_Order_Mfg_Quality_Operations_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>QMX Work Order Mfg. Quality Operations</label>
        <queue>QMX_Work_Order_Mfg_Quality_Operations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>